clusters/management/apps/dashboard/homer/app/manifests/homer.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: homer
  name: homer
  namespace: dashboard
spec:
  replicas: 3
  selector:
    matchLabels:
      app: homer

  template:
    metadata:
      labels:
        app: homer

    spec:
      volumes:
      - name: homer-icons-volume
        emptyDir: {}
      - name: config-volume
        configMap:
          name: homer-configmap
      - name: script-volume
        configMap:
          name: homer-asset-downloader-script

      containers:
      - name: homer
        image: b4bz/homer:v23.02.2
        tty: true
        volumeMounts:
        - mountPath: /www/assets/tools
          name: homer-icons-volume
        - mountPath: /www/assets/config.yml
          subPath: config.yaml
          name: config-volume
