clusters/management/apps/dashboard/homer/app/manifests/homer.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homer-ingress
  namespace: dashboard
spec:
  ingressClassName: nginx
  rules:
  - host: dashboard.admin.home.mirceanton.com
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: homer-service
              port:
                number: 8080
